# paleo-waifu

./: .gitignore  CLAUDE.md  README.md  SETUP.md  drizzle.config.ts  eslint.config.js  icon-showcase.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  seed-dev-users.sql  seed.sql  tsconfig.json  wrangler.jsonc
bot/: .env.example  README.md  package.json  pnpm-lock.yaml  register.ts  tsconfig.json  wrangler.jsonc
docs/: .pdf-style.css  audit-architecture.md  audit-performance.md  audit-security.md  balance-iteration-guide.md  balance-ui-improvements.md  battle-audit.md  battle-implementation-plan.md  battle-mechanics-design-ideas.md  battle-mechanics-design.md  battle-ui-bot-plan.md  cms-research.md  creature-pages-plan.md  data-pipeline-expansion.md  discord-bot.md  feature-ideas-v2.md  feature-ideas-v3.md  feature-ideas.md  field-sim-plan.md  game-design-ascension-battles.md  game-mechanics.md  launch-roster-plan.md  patch-notes-feature.md  performance-audit.md  polar-payments.md  production-site-audit.md  remediation-plan.md  (+1 more)
python/: README.md  ability-explorer.ipynb  balance.ipynb  meta-sim.ipynb  pyproject.toml
python/data/: creatures.json  creatures_enriched.json  wiki-enrich-results.json
python/scripts/: backfill_from_json.py  clean_descriptions.py  compute_aspect_ratios.py  d1_client.py  download_images.py  enrich_descriptions.py  enrich_pbdb.py  enrich_wikipedia.py  generate_battle_seed.py  generate_seed.py  manual_enrich.py  migrate_r2_slugs.py  scrape_creatures.py  scrape_pbdb.py  scrape_wikipedia.py  select_roster.py  upload_to_r2.py
(+449 files in other folders)
