[project]
name = "paleo-waifu-data"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.1.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "numpy>=1.26",
    "scipy>=1.14",
    "ipykernel>=6.29",
]

[tool.uv]
dev-dependencies = []
